# Gcode_renamer

./: CMakeLists.txt  Gcode_renamer.pro  Gcode_renamer.pro.user.0c7f20a.4.8-pre1  README.md  build.ps1  conanfile.txt  downloadQt.ps1  gcodefile.cpp  gcodefile.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: build.yml  build_cmake.yml  build_msvc2017.yml  build_msvc2019.yml  pre-release.yml
Gcode_renamer_installer/config/: config.xml  controlscript.qs
cmake/: CompilerWarnings.cmake  Conan.cmake
src/: CMakeLists.txt  gcodefile.cpp  gcodefile.h
src/resource/: src.qrc
